# GeneralPython

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
docs/: index.md  installation.md  usage.md
src/GeneralPython/: __init__.py  cli.py
src/GeneralPython/design_patterns/behavior/: chain_of_responsability_pattern.py  command_pattern.py  iterator_pattern.py  mediator_pattern.py  memento_pattern.py  observer_pattern.py  state_pattern.py  strategy_pattern.py  template_pattern.py
src/GeneralPython/design_patterns/creational/: abstract_factory_pattern.py  builder_pattern.py  factory_pattern.py  prototype_pattern.py  singleton_pattern.py
src/GeneralPython/design_patterns/structure/: adapter_pattern.py  bridge_pattern.py  composite_pattern.py  decorator_pattern.py  facade_pattern.py  flyweight_pattern.py  proxy_pattern.py
src/GeneralPython/magic_methods/: oop_dunder_methods.py
src/GeneralPython/oop/: objects.py
tests/: __init__.py  test_GeneralPython.py
