[project]
name = "GeneralPython"
version = "0.1.0"
description = "Package with all the stuff I did during my Python learning"
readme = "README.md"
authors = [
  {name = "druiz35", email = "druiz35contact@gmail.com"}
]
maintainers = [
  {name = "druiz35", email = "druiz35contact@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/druiz35/GeneralPython/issues"
changelog = "https://github.com/druiz35/GeneralPython/blob/master/changelog.md"
homepage = "https://github.com/druiz35/GeneralPython"

[project.scripts]
GeneralPython = "GeneralPython.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
